Automatically backed up by Learn

--- a/app/views/songs/show.erb
+++ b/app/views/songs/show.erb
@@ -13,3 +13,6 @@
 <form action="/songs/<%=@song.slug%>" method="get">
   <input type="submit" name="submit" value="Edit Song">
 </form>
+<form action="/songs/new" method="get">
+  <input type="submit" name="submit" value="New Song">
+</form>
