Automatically backed up by Learn

--- a/app/views/songs/show.erb
+++ b/app/views/songs/show.erb
@@ -11,6 +11,6 @@
 </ul>
 <br>
 <form method="get">
-  <button type="submit" formaction="/songs/<%=@song.slug%>">Edit Song</button>
+  <button type="submit" formaction="/songs/<%=@song.slug%>/edit">Edit Song</button>
   <button type="submit" formaction="/songs/new">New Song</button>
 </form>
